--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   },
   "homepage": "https://github.com/1GBattle/react-projects#readme",
   "dependencies": {
-    "create-react-app": "^5.0.0"
+    "@reduxjs/toolkit": "^1.7.2",
+    "create-react-app": "^5.0.0",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "redux": "^4.1.2"
   }
 }
