--- a/The-Weather-App/client/package.json
+++ b/The-Weather-App/client/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
+    "vercel": "^27.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
